chore: changed elements in navbar that were not links to actual links, set their href to the expected place. Also added the DeskUp logo by hooking it from the main repo. Finally, made a little refactoring on the css file to mark the sections, and added a global configuration for the html file

--- a/landing.html
+++ b/landing.html
@@ -10,19 +10,22 @@
     <body>
         <header>
             <nav>
-                <b>DeskUp</b>
-                <p>Features</p>
+                <a href = "./landing.html" class = "navbar-brand">
+                    <img id = "navbar-deskup-logo"src="https://raw.githubusercontent.com/NicolasSerranoGarcia/DeskUp/main/assets/DeskUp-256x256.png" alt="DeskUp logo">
+                    <b>DeskUp</b>
+				</a>
+                <a href = "#features-section">Features</a>
                 <a href="https://github.com/NicolasSerranoGarcia/DeskUp/releases"><p>Download</p></a>
                 <a href="https://DeskUpDocs.github.io"><p>Documentation</p></a>
                 <a href="https://github.com/NicolasSerranoGarcia/DeskUp/"><p>SC</p></a>
-                <p>About</p>
+                <a href = "/">About</a>
             </nav>
         </header>
         <main>
             <section id="main-section">
                 <h1>DeskUp</h1>
                 <p><b>Save and restore your workspaces on demand</b></p>
-                <img id="logo" src="" alt="Deskup Logo"/>
+                <img src="https://raw.githubusercontent.com/NicolasSerranoGarcia/DeskUp/main/assets/DeskUp-96x96.png" alt="DeskUp icon">
                 <a><img id="download-windows" alt=""/></a>
             </section>
             <section>
@@ -30,18 +33,18 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus congue nibh sed neque venenatis aliquet. In eget viverra nisl. Nam dictum, risus in semper fermentum, nisi velit accumsan libero, a rhoncus est erat ut risus. Maecenas eleifend lectus nisi. Etiam mattis ornare scelerisque. Praesent vitae libero vel dolor eleifend posuere. Etiam porta mauris nec posuere laoreet.
                 <!-- Photo GUI-->
             </section>
-            <section>
+            <section id = "features-section">
                 <h2>Innovative features</h2>
                 <!-- Features-->
                 <p>With DeskUp, you will be...</p>
                 <!-- Share your idea-->
-            </section>           
+            </section>
             <section>
                 <p>DeskUp is open source, ...</p>
                 <!-- See licence-->
                 <!-- Contribute-->
                 <!-- Photo github o community-->
-            </section>          
+            </section>
         </main>
         <footer>
 
