chore (landing.html): fixed a navbar link to redirect correctly to the main page

--- a/landing.html
+++ b/landing.html
@@ -18,7 +18,7 @@
                 <a href="https://github.com/NicolasSerranoGarcia/DeskUp/releases"><p>Download</p></a>
                 <a href="https://DeskUpDocs.github.io"><p>Documentation</p></a>
                 <a href="https://github.com/NicolasSerranoGarcia/DeskUp/"><p>SC</p></a>
-                <a href = "/">About</a>
+                <a href = "./landing.html">About</a>
             </nav>
         </header>
         <main>
