Implemented new sections and styled them

--- a/landing.html
+++ b/landing.html
@@ -19,24 +19,31 @@
             </nav>
         </header>
         <main>
+
             <section id="wrapper-main-section">
                 <h1>DeskUp</h1>
                 <p>Focus more. Search less. Organize everything.</p>
-                <div id = "wrapper-photo">
-                    <img class = "rounded main-logo" src="./DeskUpLogo.png" alt = "DeskUp Logo"/>
+				<div id="wrapper-main-section-media">
+					<div id = "wrapper-photo">
+						<img class = "rounded main-logo" src="https://raw.githubusercontent.com/NicolasSerranoGarcia/DeskUp/main/assets/DeskUp-256x256.png" alt = "DeskUp Logo"/>
+					</div>
+					<div id = "wrapper-pop-button"></div>
+						<a class="smooth-rectangle" href="https://github.com/NicolasSerranoGarcia/DeskUp/releases/tag/v0.2.0">Download for windows.</a>
+					</div>
+				</div>
+            </section>
+
+            <section id="wrapper-deskup-description-section">
+				<div id="wrapper-deskup-description-section-text">
+					<h2>What's Deskup?</h2>
+					<p>DeskUp is a lightweight, desktop application that lets you save and load your workspaces instantly.
+						Whether you work with multiple terminals, editors, or applications, DeskUp helps you quickly restore your setup and keep your workflow organized.</p>
                 </div>
-                <div id = "wrapper-pop-button"></div>
-                    <a href="https://github.com/NicolasSerranoGarcia/DeskUp/releases/tag/v0.2.0"><img class = "smooth-rectangle" src="./download-for-windows.png" alt = "Download for windows button"/></a>
+				<div id = "wrapper-photo">
+                    <img class="laptop" src="https://raw.githubusercontent.com/NicolasSerranoGarcia/DeskUp/main/assets/DeskUp-256x256.png" alt = "Laptop with deskup opened"/>
                 </div>
             </section>
-            <section>
-                <h2>What's Deskup?</h2>
-                <p>DeskUp is a lightweight, desktop application that lets you save and load your workspaces instantly.
-                    Whether you work with multiple terminals, editors, or applications.</p>
-                    <div id = "wrapper-photo">
-                        <img class = "rounded" src="./photoGUI.png" alt = "DeskUp Logo"/>
-                    </div>
-            </section>
+
             <section id="features">
                 <h2>Innovative features</h2>
                 <!-- Features-->
@@ -45,22 +52,23 @@
                 <div id = "wrapper-pop-button"></div>
                     <a href="https://nicolasserranogarcia.github.io/"><img class = "smooth-rectangle" src="./share-your-idea.png" alt = "Share your idea button"/></a>
                 </div>
-            </section>           
-            <section>
+            </section>
+
+            <section id ="wrapper-open-source-description-section">
                 <h2>Open Source</h2>
-                <p><b>DeskUp</b> is open source, giving you full transparency and control over how your workspaces are saved, loaded, and managed. With DeskUp, 
+                <p><b>DeskUp</b> is open source, giving you full transparency and control over how your workspaces are saved, loaded, and managed. With DeskUp,
                     you will be able to customize and extend the app to fit your unique workflow perfectly.</p>
-                <div id = "wrapper-pop-button"></div>
-                    <a href="https://github.com/NicolasSerranoGarcia/DeskUp/blob/main/LICENSE"><img class = "smooth-rectangle" src="./see-licence.png" alt = "See licence button"/></a>
-                </div>
-                <div id = "wrapper-pop-button"></div>
-                    <a href="https://github.com/NicolasSerranoGarcia/DeskUp/blob/main/README.md"><img class = "smooth-rectangle" src="./contribute.png" alt = "Contribute button"/></a>
-                </div>
+
+				<div id="wrapper-open-source-description-section-interactive">
+						<a class="smooth-rectangle" href="https://github.com/NicolasSerranoGarcia/DeskUp/blob/main/LICENSE">See licence</a>
+						<a class="smooth-rectangle" href="https://github.com/NicolasSerranoGarcia/DeskUp/blob/main/README.md">Contribute</a>
+				</div>
                 <!--Photo maybe?-->
-            </section>          
+            </section>
+
         </main>
         <footer>
-            <p>2025 DeskUp — Open Source Workspace Manager</p>
+            <p>©2025 DeskUp — Open Source Workspace Manager</p>
         </footer>
     </body>
 </html>
