--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="DeskUp landing page" />
-        <link rel="stylesheet" href="landing.css">
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <header>
