--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <a href="#header"><b>DeskUp</b></a>
                 <p><a href="#features">Features</a></p>
                 <p><a href="https://github.com/NicolasSerranoGarcia/DeskUp/releases">Download</a></p>
-                <p><a href="https://deskup-docs.github.io">Documentation</a></p>
+                <p><a href="https://deskup-docs.nicolasserranogarcia.com">Documentation</a></p>
                 <p><a href="https://github.com/NicolasSerranoGarcia/DeskUp/">SC</a></p>
-                <p><a href="./landing.html">About</a></p>
+                <p><a href="./index.html">About</a></p>
             </nav>
         </header>
         <main>
