Made the footer better looking.

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
             <section id ="wrapper-open-source-description-section">
                 <h2>Open Source</h2>
-                <p><b>DeskUp</b> is open source, giving you full transparency and control over how your workspaces are saved, loaded, and managed. With DeskUp,
-                    you will be able to customize and extend the app to fit your unique workflow perfectly.</p>
+                <p><b>DeskUp</b> is open source, giving you full transparency and control over how your workspaces are saved, loaded, and managed.
+					If you'd like to change something, we are open to contributions!</p>
 
 				<div id="wrapper-open-source-description-section-interactive">
 						<a class="smooth-rectangle" href="https://github.com/NicolasSerranoGarcia/DeskUp/blob/main/LICENSE">See licence</a>
@@ -67,8 +67,15 @@
             </section>
 
         </main>
-        <footer>
-            <p>©2025 DeskUp — Open Source Workspace Manager</p>
-        </footer>
+		<footer>
+			<div class="footer-logo">
+				<img src="https://raw.githubusercontent.com/NicolasSerranoGarcia/DeskUp/main/assets/DeskUp-256x256.png" alt="DeskUp Logo">
+				<b>DeskUp</b>
+			</div>
+			<p>©2025 DeskUp, Open Source Workspace Manager</p>
+			<a href="https://github.com/NicolasSerranoGarcia/DeskUp" target="_blank">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub">
+			</a>
+		</footer>
     </body>
 </html>
