Made the gap bigger in the navbar, implementing flex.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <body>
         <header>
             <nav>
-                <a href="#header"><b>DeskUp</b></a>
+				<div class="footer-logo">
+					<img src="https://raw.githubusercontent.com/NicolasSerranoGarcia/DeskUp/main/assets/DeskUp-256x256.png" alt="DeskUp Logo">
+					<b>DeskUp</b>
+				</div>
                 <p><a href="#features">Features</a></p>
                 <p><a href="https://github.com/NicolasSerranoGarcia/DeskUp/releases">Download</a></p>
                 <p><a href="https://deskup-docs.nicolasserranogarcia.com">Documentation</a></p>
