Deleted the innovative feature section and added a tech stack section.

--- a/index.html
+++ b/index.html
@@ -47,14 +47,21 @@
                 </div>
             </section>
 
-            <section id="features">
-                <h2>Innovative features</h2>
-                <!-- Features-->
-                <p>With DeskUp, you will be able to instantly restore your entire workspace,
-                    from open applications to window layouts, so you can jump back into work without missing a beat.</p>
-                <div id = "wrapper-pop-button"></div>
-                    <a href="https://nicolasserranogarcia.github.io/"><img class = "smooth-rectangle" src="./share-your-idea.png" alt = "Share your idea button"/></a>
-                </div>
+            <section id="wrapper-tech-stack">
+                <h2>Techologies used</h2>
+				<p>DeskUp was built thanks to the help of powerful modern technologies.</p>
+				<a href="https://isocpp.org/" target="_blank" rel="noopener">
+					<img class="tech-logo" src="https://upload.wikimedia.org/wikipedia/commons/1/18/ISO_C%2B%2B_Logo.svg" alt="ISO C++ Logo">
+				</a>
+				<a href="https://cmake.org/" target="_blank" rel="noopener">
+					<img class="tech-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/Cmake.svg/1024px-Cmake.svg.png" alt="CMake Logo">
+				</a>
+				<a href="https://github.com/features/actions" target="_blank" rel="noopener">
+					<img class="tech-logo" src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Actions Logo">
+				</a>
+				<a href="https://www.qt.io/" target="_blank" rel="noopener">
+					<img class="tech-logo qt-logo"  src="https://www.qt.io/hs-fs/hubfs/Qt-logo-neon_900px.png?width=300&height=214&name=Qt-logo-neon_900px.png" alt="Qt Logo">
+				</a>
             </section>
 
             <section id ="wrapper-open-source-description-section">
@@ -66,7 +73,6 @@
 						<a class="smooth-rectangle" href="https://github.com/NicolasSerranoGarcia/DeskUp/blob/main/LICENSE">See licence</a>
 						<a class="smooth-rectangle" href="https://github.com/NicolasSerranoGarcia/DeskUp/blob/main/README.md">Contribute</a>
 				</div>
-                <!--Photo maybe?-->
             </section>
 
         </main>
