Made some fixes.

--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
             </section>
 
             <section id ="wrapper-open-source-description-section">
-                <h2>Open Source</h2>
-                <p><b>DeskUp</b> is open source, giving you full transparency and control over how your workspaces are saved, loaded, and managed.
-					If you'd like to change something, we are open to contributions!</p>
-
+                <div id ="wrapper-open-source-description-section-text">
+					<h2>Open Source</h2>
+					<p><b>DeskUp</b> is open source, giving you full transparency and control over how your workspaces are saved, loaded, and managed.
+						If you'd like to change something, we are open to contributions!</p>
+				</div>
 				<div id="wrapper-open-source-description-section-interactive">
 						<a class="smooth-rectangle" href="https://github.com/NicolasSerranoGarcia/DeskUp/blob/main/LICENSE">See licence</a>
 						<a class="smooth-rectangle" href="https://github.com/NicolasSerranoGarcia/DeskUp/blob/main/README.md">Contribute</a>
